Update 'mj0vg2go3-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:79b754d148bbdee788e6bc3803292e8d338072b9@sha256:3ed9d78121c569bbef225d93ff2b0be09b4b360d22fe6a25fed85bb6c8559a9f

--- a/components/mj0vg2go3-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/mj0vg2go3-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: mj0vg2go3-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:79b754d148bbdee788e6bc3803292e8d338072b9@sha256:3ed9d78121c569bbef225d93ff2b0be09b4b360d22fe6a25fed85bb6c8559a9f
+          name: container-image
